--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 goit_m2_web_homework_4/storage/data.json
+goit_m2_web_homework_4/storage/data.json
